dfir_rs/tests/compile-fail-stable/surface_port_unused_both.stderr
error: Input port index is unused. (Is the port on the correct side?)
 --> tests/compile-fail-stable/surface_port_unused_both.rs:7:10
  |
7 |         [0]src -> dst[0];
  |          ^

error: Output port index is unused. (Is the port on the correct side?)
 --> tests/compile-fail-stable/surface_port_unused_both.rs:7:23
  |
7 |         [0]src -> dst[0];
  |                       ^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_port_unused_both.rs:9:8
  |
9 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
